--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -131,10 +131,10 @@ Virtualbox 虚拟机软件参考资料网址：
 
 待续
 
-\subsection{使用本虚拟机的步骤和注意事项}%
+\subsection{使用本虚拟机的注意事项}%
 \label{sub:virtualbox-guest-ganx}
 
-\subsubsection{配置文件}%
+\subsubsection{同步配置文件的 git 仓库}%
 \label{ssub:virtualbox-guest-ganx-conf}
 
 本虚拟机的配置文件主要由以下两个仓库控制：
