修改 5.1 为 5.1.1, 并做一些微修改。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -279,13 +279,19 @@ Virtualbox 虚拟机软件参考资料网址：
 \chapter{Git 使用教程}%
 \label{cha:git-tips}
 
-\section{Github 的注册和 SSH 设置}%
-\label{sec:git-hub}
+\section{基本配置}%
+\label{sec:git-settings}
+
+
+\subsection{Github 的注册和 SSH 设置}%
+\label{sec:git-ssh}
 
 设置步骤：
 \begin{itemize}
     \item 在 \href{https://github.com/}{https://github.com/}
         上登陆（注册并登陆）你的账户。
+        假设你在 \lstinline{github.com} 的用户名为 \lstinline{yourUsername},
+        你的电子邮件为 \lstinline{yourEmail}.
     \item 新建在github上使用的公匙：
         \begin{itemize}
             \item 打开一个终端 (\lstinline{terminal});
