--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -102,7 +102,7 @@ Virtualbox 虚拟机软件参考资料网址：
 \end{enumerate}
 
 \chapter{Linux 使用教程}%
-\label{sec:linux-tips}
+\label{cha:linux-tips}
 
 \section{Linux 的简单介绍}%
 \label{sec:linux-intro}
@@ -192,12 +192,11 @@ Virtualbox 虚拟机软件参考资料网址：
         \end{lstlisting}
 \end{itemize}
 
-
-\section{Linux 的学习方式}%
-\label{sec:linux-learning}
-
-待续
-
+%\section{Linux 的学习方式}%
+%\label{sec:linux-learning}
+%
+%待续
+%
 \section{Linux 的常用命令}%
 \label{sec:linux-commands}
 
@@ -217,19 +216,17 @@ Virtualbox 虚拟机软件参考资料网址：
 \end{enumerate}
 
 \chapter{Vim 使用教程及技巧}%
-\label{sec:vim-tips}
+\label{cha:vim-tips}
 
-\section{Vim 的简单介绍}%
 \label{sec:vim-intro}
 
-待续
-%Vim 的学习曲线（To do）。
 
-\section{Vim 的学习方式}%
-\label{sec:vim-learning}
 
-在终端中，输入 \lstinline{vimtutor} 命令学习 Vim
-的基本用法，然后在使用中继续学习。
+%待续
+%%Vim 的学习曲线（To do）。
+%
+%\section{Vim 的学习方式}%
+%\label{sec:vim-learning}
 
 \chapter{\LaTeX{} 使用教程}%
 \label{cha:latex-tips}
@@ -239,7 +236,7 @@ Virtualbox 虚拟机软件参考资料网址：
 
 \LaTeX{} 参考资料网址：
 \begin{itemize}
-    \item 官方网址： \href{https://www.c tan.org/}{https://www.ctan.org/}
+    \item 官方网址： \href{https://www.ctan.org/}{https://www.ctan.org/}
     \item 问答网站：
         \href{https://tex.stackexchange.com/}{https://tex.stackexchange.com/}
     \item 软件下载：如果官方网址下载 \lstinline{texlive.iso} 慢的话，可以在
@@ -297,10 +294,10 @@ Virtualbox 虚拟机软件参考资料网址：
         \end{itemize}
 \end{itemize}
 
-\section{使用教程}%
-\label{sec:latex-tips}
+%\section{使用教程}%
+%\label{sec:latex-tips}
 
-待续
+%待续
 
 \chapter{Git 使用教程}%
 \label{cha:git-tips}
@@ -370,23 +367,22 @@ Virtualbox 虚拟机软件参考资料网址：
 [github]
 	user = yourUsername
 \end{lstlisting}
-
 \end{enumerate}
 
-\section{Git 的简单介绍}%
-\label{sec:git-intro}
-
-待续
-
-\section{Git 的学习方式}%
-\label{sec:git-learning}
-
-待续
-
-\section{Git 使用教程及技巧}%
-\label{sec:git-tips}
-
-待续
+%\section{Git 的简单介绍}%
+%\label{sec:git-intro}
+%
+%待续
+%
+%\section{Git 的学习方式}%
+%\label{sec:git-learning}
+%
+%待续
+%
+%\section{Git 使用教程及技巧}%
+%\label{sec:git-tips}
+%
+%待续
 
 %\nocite{*}
 
