--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -90,7 +90,7 @@ Virtualbox 虚拟机软件参考资料网址：
 
 \newpage
 \subsection{调整虚拟机窗口大小}%
-\label{sec:virtualbox-tip-window-size}
+\label{sub:virtualbox-tip-window-size}
 
 至少有三种方法：
 \begin{enumerate}
