vim: Gvim 的个性化设置。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -255,6 +255,14 @@ Virtualbox 虚拟机软件参考资料网址：
 你对本台虚拟机的特殊设置可以在 \lstinline{.vimrc_customized} 和
 \lstinline{.gvimrc_customized} 中配置。
 
+\subsection{Gvim 的个性化设置}%
+\label{sub:vim-gui-config-customized}
+
+打开 \lstinline{~/.gvimrc_customized}, 进行 Gvim 的个性化设置。例如：
+\begin{lstlisting}[escapeinside=``]
+    set guifont=Monospace\ 13
+    set linespace=4
+\end{lstlisting}
 %待续
 %%Vim 的学习曲线（To do）。
 %
