--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -168,9 +168,9 @@ Virtualbox 虚拟机软件参考资料网址：
 \end{enumerate}
 
 \subsubsection{更新配置文件 --- 手动方式}%
-\label{sec:update-dotfiles}
+\label{ssub:update-dotfiles-manual}
 
-\begin{itemize}
+\begin{enumerate}
     \item 运行下面几个命令，更新 \href{https://github.com/ddpom/dotfiles}
         {https://github.com/ddpom/dotfiles}:
 \begin{lstlisting}[escapeinside=``]
