--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -103,6 +103,26 @@ Virtualbox 虚拟机软件参考资料网址：
 
 \chapter{Linux 使用教程}%
 \label{cha:linux-tips}
+\section{参考资料}%
+\label{sec:linux-refs}
+
+\begin{itemize}
+    \item 官方网址： \href{https://www.linux.org/}{https://www.linux.org/}
+    \item Ubuntu ~ ~： \href{https://cn.ubuntu.com/}{https://cn.ubuntu.com/}
+    \item 社区讨论：
+        \href{https://forum.ubuntu.com.cn/}{https://forum.ubuntu.com.cn/}
+    \item 问答网站：
+        \href{https://askubuntu.com/}{https://askubuntu.com/}
+    \item Linux 教程：
+        \begin{itemize}
+            \item \lstinline{Ubuntu desktop help}
+                \footnote{按 \lstinline{F1} 即可以打开。}
+            \item \href{https://linuxtools-rst.readthedocs.io/zh_CN/latest/}
+                {Linux 工具快速教程}
+            \item \href{https://dunwu.github.io/linux-tutorial/#/}
+                {Linux 教程}
+        \end{itemize}
+\end{itemize}
 
 \section{Linux 的简单介绍}%
 \label{sec:linux-intro}
