--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -103,6 +103,7 @@ Virtualbox 虚拟机软件参考资料网址：
 
 \chapter{Linux 使用教程}%
 \label{cha:linux-tips}
+
 \section{参考资料}%
 \label{sec:linux-refs}
 
@@ -117,6 +118,8 @@ Virtualbox 虚拟机软件参考资料网址：
         \begin{itemize}
             \item \lstinline{Ubuntu desktop help}
                 \footnote{按 \lstinline{F1} 即可以打开。}
+            \item \href{https://help.ubuntu.com/lts/ubuntu-help/index.html}
+                {Ubuntu 桌面指南}
             \item \href{https://linuxtools-rst.readthedocs.io/zh_CN/latest/}
                 {Linux 工具快速教程}
             \item \href{https://dunwu.github.io/linux-tutorial/#/}
@@ -124,10 +127,10 @@ Virtualbox 虚拟机软件参考资料网址：
         \end{itemize}
 \end{itemize}
 
-\section{Linux 的简单介绍}%
+\section{简单介绍}%
 \label{sec:linux-intro}
 
-\subsection{Linux 的系统配置}%
+\subsection{系统配置}%
 \label{sub:linux-settings}
 
 在 Unix/Linux/Mac 系统上，软件有它们各自的配置文件，通常以 ~.  开头，
@@ -250,7 +253,7 @@ MAILTO=""
 %
 %待续
 %
-\section{Linux 的常用命令}%
+\section{常用命令}%
 \label{sec:linux-commands}
 
 常用命令：
@@ -290,7 +293,7 @@ mv github_yourname_ganx.pub github_ddpom_ganx.pub
         \end{itemize}
 \end{itemize}
 
-\section{Vim 的配置}%
+\section{常用配置}%
 \label{sec:vim-intro}
 
 \subsection{Vim 的配置文件}%
