Git: 增加参考资料；上传 Pro Git 中文和英文版本电子书。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -430,7 +430,26 @@ endif
 \chapter{Git 使用教程}%
 \label{cha:git-tips}
 
-\section{基本配置}%
+\section{参考资料}%
+\label{sec:git-refs}
+
+\begin{itemize}
+    \item 官方网址： \href{https://git-scm.com/}{https://git-scm.com/}
+    \item 问答网站：
+        \href{https://stackoverflow.com/questions/tagged/git+github}
+        {https://stackoverflow.com/questions/tagged/git+github}
+    \item Linux 教程：
+        \begin{itemize}
+            \item \href{https://git-scm.com/book/zh/v2}
+                {Pro Git 中文}
+                ~ \href{books/progit_v2.1.31_zh.pdf}{pdf 中文}
+                ~ \href{https://git-scm.com/book/en/v2} {Pro Git 英文}
+                 ~ \href{books/progit_v2.1.177_en.pdf}{pdf 英文}
+            \item \href{https://help.github.com/en/github}
+                {Github 帮助}
+        \end{itemize}
+\end{itemize}
+\section{常用配置}%
 \label{sec:git-settings}
 
 
