增加 latex 一章的序言，列出 Latex 的特点和优点。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -442,6 +442,36 @@ endif
 \chapter{\LaTeX{} 使用教程}%
 \label{cha:latex-tips}
 
+\section*{序言}%
+\label{sec:latex-intro}
+
+\emph{使用 {\rm\LaTeX{}} 排版科技文章的特点}
+~\footnote{\href{https://github.com/HymanHuang/plutothesis/tree/master/PlutoKaiTi/a4paper}{参考文献}}
+：
+\begin{itemize}
+      \item 所想即所得（ \emph{WYSTWYG，What You Think Is What You Get}），
+          让你更专注于论文的思路贯通而不是繁杂的格式要求，
+          更适合排版科技文章；
+      \item \LaTeX 文件为纯文本文件，有利于使用 Git 等软件进行版本控制；
+      \item \LaTeX 的输出为符合国际文档标准的 pdf 文档，
+          在 \emph{MicroSoft Windows},
+          \emph{Mac}, \emph{Linux}~系统上是一致的，所以跨平台使用更方便；
+      \item \LaTeX 文件比~\emph{MicroSoft Word} 文件显著地小，易于传输和分享；
+      \item \LaTeX 数学公式输入排版方便,输出精美；
+      \item 国际期刊及会议一般都提供~\LaTeX 论文模板,使论文投稿排版更容易；
+      \item 目前国内外不少高校也都具有~\LaTeX{}学位论文写作模板，
+          使写作学位论文的排版不再是痛苦，而是一种享受；
+      \item 制作幻灯片的~\LaTeX 宏包~\emph{beamer},
+          公式和文字输入一样方便，
+          % 没有~\emph{PowerPoint}~ 的那种繁琐公式和图片位置调整，
+          众多的默认模版供选择，一个简单命令就可切换，
+          让幻灯片制作更轻松、专业、漂亮；
+      \item  众多的文档类和宏包支持，给你的感觉是``没有你做不到的，只有你想不到的''；
+      \item  对许多忠实的~TeXer 而言，\TeX/\LaTeX 已经不仅仅是一种排版软件，更成为一种信仰，
+      因为它的诞生及其发展本身就是一段趋向完美的传奇。
+\end{itemize}
+
+
 \section{参考资料}%
 \label{sec:latex-refs}
 
