用教程“30分钟从完全陌生到基本入门”替换原来的入门教程。

--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -494,8 +494,10 @@ endif
         由于从网页下载较慢，就放在本仓库了，感谢作者开源贡献。}
     \item \LaTeX{} 教程：
         \begin{itemize}
-            \item \href{h ttps://github.com/luong-komorebi/Begin-Latex-in-minutes/blob/master/Translation-Chinese.md}
-                {学习 \LaTeX{} 从现在开始 (Begin \LaTeX{} in Minutes)}
+            % \item \href{https://github.com/luong-komorebi/Begin-Latex-in-minutes/blob/master/Translation-Chinese.md}
+            %     {学习 \LaTeX{} 从现在开始 (Begin \LaTeX{} in Minutes)}
+            \item \href{https://www.latexstudio.net/archives/9377.html}
+                {30分钟从完全陌生到基本入门}
             \item
                 \href{https://www.ctan.org/tex-archive/info/lshort/chinese}
                 {一份不太简短的LATEX介绍}
