--- a/toolsRes.tex
+++ b/toolsRes.tex
@@ -4,19 +4,18 @@
 \documentclass[cn,11pt, simple]{elegantbook}
 
 \title{Virtualbox、Linux、Vim、\LaTeX{}、Git、Zotero}
-\subtitle{科学研究中常用的开源工具的简单介绍}
+\subtitle{科学研究中常用开源工具的简单介绍}
 
 \author{甘湘华}
 \institute{西南财经大学}
 \date{\today}
 \version{0.01}
 
-\extrainfo{本教程基于已经配置好所用软件的
-    {\rm Virtualbox} 虚拟机，力求尽快让技术小白能够用
-    {\rm \LaTeX{}} 写研究论文，以 及用~{\rm \lstinline{Git}}
-    工具来进行版本控制。
-    需要声明的是，作者本人也是小白一枚，请读者批判地学习本教程。
-    不当以及需改进之处，请不吝指出，谢谢！}
+\extrainfo{本教程基于已经配置好的虚拟机，介绍科学研究中常用开源工具。
+    最主要的目标是想让读者能在短时间内学会用{\rm \LaTeX{}} 写作，
+    以及用~{\rm \lstinline{Git}} 工具进行版本控制和团队协作。
+    在使用本虚拟机和本教程的过程中，如果发现其有不当及需改进之处，
+    请不吝指出，谢谢{\rm !!!}}
 
 \logo{logo.png}
 \cover{cover.jpg}
